# app/Domain/Entity/Categoria.php
@@ -1,6 +1,7 @@
 <?php
 namespace App\Domain\Entity;
 
+use Doctrine\Common\Collections\Collection;
 use Doctrine\ORM\Mapping as ORM;
 use OpenApi\Annotations as OA;
 
@@ -34,6 +35,14 @@ class Categoria
     #[ORM\Column(type: 'float')]
     private string $taxa;
 
+    #[ORM\OneToMany(targetEntity: "Carro", mappedBy: "categoria")]
+    private Collection $carros;
+
+    public function getId(): int
+    {
+        return $this->id;
+    }
+
     public function getNome(): string
     {
         return $this->nome;
@@ -52,5 +61,10 @@ class Categoria
     public function setTaxa(float $taxa): void
     {
         $this->taxa = $taxa;
+    }
+
+    public function getCarros(): Collection
+    {
+        return $this->carros;
     }
 }
