# app/Http/Controllers/Api/CategoriaController.php
@@ -2,7 +2,6 @@
 namespace App\Http\Controllers\Api;
 
 use App\Domain\Entity\Carro;
-use App\Domain\Entity\CarroModelo;
 use App\Domain\Entity\Categoria;
 use App\Http\Response\JsonResponse;
 use Doctrine\ORM\EntityManager;
@@ -13,7 +12,8 @@ use Psr\Http\Message\ServerRequestInterface as Request;
 /**
  * @OA\Info(title="API Locação de Carros", version="0.1")
  */
-final class CategoriaController {
+final class CategoriaController
+{
     private EntityManager $entityManager;
 
     public function __construct(EntityManager $entityManager)
@@ -36,10 +36,20 @@ final class CategoriaController {
      *     )
      * )
      */
-    public function lista(Request $request, Response $response) {
-        $repository = $this->entityManager->getRepository(Categoria::class);
-        $models = $repository->findAll();
-        return new JsonResponse($models);
+    public function lista(Request $request, Response $response): Response
+    {
+        $categorias = $this->entityManager->getRepository(Categoria::class)->findAll();
+
+        $data = array_map(function (Categoria $categoria) {
+            return [
+                'id' => $categoria->getId(),
+                'nome' => $categoria->getNome(),
+                'taxa' => $categoria->getTaxa(),
+                'numero_carros' => $categoria->getCarros()->count()
+            ];
+        }, $categorias);
+
+        return new JsonResponse($data);
     }
 
     /**
@@ -60,7 +70,8 @@ final class CategoriaController {
      *     )
      * )
      */
-    public function remover(Request $request, Response $response): Response {
+    public function remover(Request $request, Response $response): Response
+    {
         $id = $request->getQueryParams()['id'] ?? null;
 
         if ($id == null)
@@ -81,5 +92,64 @@ final class CategoriaController {
         } catch (\Exception $e) {
             return new JsonResponse(['code' => 500]);
         }
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/categorias/cadastrar",
+     *     summary="Cadastrar um novo carro",
+     *     description="Endpoint para cadastrar um novo carro",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Dados do carro a ser cadastrado",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 required={"placa", "cor", "entrada", "saida", "modeloId"},
+     *                 @OA\Property(property="placa", type="string", example="ABC1234"),
+     *                 @OA\Property(property="cor", type="string", example="Preto"),
+     *                 @OA\Property(property="modelo", type="integer", example=1)
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Carro cadastrado com sucesso",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer", example=1)
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Erro de validação dos dados",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="error", type="string", example="Parâmetros inválidos")
+     *         )
+     *     )
+     * )
+     */
+    public function cadastrar(Request $request, Response $response): Response
+    {
+        $content = $request->getBody()->getContents();
+
+        $data = json_decode($content, true);
+
+        if ($data == null)
+            return new JsonResponse(['code' => 500]);
+
+        $nome = $data['nome'];
+        $taxa = $data['taxa'];
+
+        $categoria = new Categoria();
+        $categoria->setNome($nome);
+        $categoria->setTaxa($taxa);
+
+        $this->entityManager->persist($categoria);
+        $this->entityManager->flush();
+
+        return new JsonResponse(['code' => 200]);
     }
 }
